# Polytech

./: .gitignore  README.md
S5/postgresql/: shell.nix
S5/prog_c_sys/Exams/2015/: ex2.c  ex3.c
S5/prog_c_sys/TD1/: 1-abs.c
S5/prog_c_sys/TD10/: debugSimple  list  list.c  matrice  matrice.c  memoire  rechercheBinaire  stackCanary  test-valgrind  tri  tri.c
S5/prog_c_sys/TD2/: 3-insertion.c  all.txt
S5/prog_c_sys/TD3/: 2-palindrome.c  6-suppression.c
S5/prog_c_sys/TD5/: 1-str.c  2-map.c  5-option.c
S5/prog_c_sys/TD6/: 2-linked-list.c  CMakeLists.txt  vector.h
SI3/S5/postgresql/: shell.nix
SI3/S5/prog_c_sys/TD1/: 2-entiers.c  CMakeLists.txt
SI3/S5/prog_c_sys/TD2/: 1-comptage.c  4-dump_hexa.c  input.txt
SI3/S5/prog_c_sys/TD3/: 2-palindrome.c  4-suppress-char.c  5-fgrep.c  CMakeLists.txt
SI3/S5/prog_c_sys/TD4/: 2-cat-strings.c  3-calc.c  4-printf.c
SI3/S5/prog_c_sys/TD5/: 3-iterate.c  4-echo.c
SI3/S5/prog_c_sys/TD6/: 3-stdin-to-str.c  4-btree.c  CMakeLists.txt
SI3/S5/prog_c_sys/TD7/: Makefile  main.c  table.h  vector.h
SI3/S5/prog_c_sys/TD8/: 1_base.c  2_set.c  3_xorcrypt.c
SI3/S5/prog_object/: shell.nix
SI3/S5/prog_object/DS3/: EmptyQueueException.java  EmptyStackException.java  EnhancedQueueImpl.java  EnhancedQueueInterface.java  ExtendedQueueInterface.java  LogItemImpl.java  LogItemImplV0.java  LogItemStack.java  QueueInterface.java  ReversibleQueueImpl.java  StackInterface.java  UndoInterface.java
SI3/S5/prog_object/TD4/: Recursion.java
SI3/S6/dsa/: flake.nix
SI3/S6/ihm/: .nix-shell-inputs  shell.nix
SI3/S6/ihm/DS2/: settings.gradle
SI3/S6/ihm/Taquin/: settings.gradle
SI3/S6/prog_sys/: flake.nix
SI3/S6/prog_sys/TD1/: Makefile  load_library.c  log.txt  main.c  main_dynload.c  shell.nix  td1.md  test
SI3/S6/prog_sys/TD10/: install.sh  td10.md
SI3/S6/prog_sys/TD1B/: CMakeLists.txt  td1b.md
SI3/S6/prog_sys/TD1B/Bibliotheques/: CMakeLists.txt  printStop.c
SI3/S6/prog_sys/TD1B/Exe_DynLink/: CMakeLists.txt  main.c
SI3/S6/prog_sys/TD1B/Exe_DynLoad/: CMakeLists.txt  main.c
SI3/S6/prog_sys/TD3/: CMakeLists.txt  exec_prop.c  exec_prop_aux.c  fcat.c  multiple_fork.c  orphelin.c  shell_exec.c  shell_system.c  td3.md  zombie.c
SI3/S6/prog_sys/TD4/: Makefile  jeu.c  juste.c  juste_presque.c  multiple_fork.c  multiple_threads.c  td4.md  threads.c
SI3/S6/prog_sys/TD5/: Makefile  fd_herit.c  lsrec.c  mycp1.c
SI3/S6/prog_sys/TD7/: Makefile  td7.md  tst_children.c  tst_ignore.c  tst_sigaction.c  tst_signal.c
SI3/S6/prog_sys/TD8/: Makefile  mymalloc.c  mymalloc.h  obfuscate.h  test-limit.c  test-realloc.c  test-simple.c  test.c
SI3/S6/prog_sys/TD9/: .envrc  HelloWorld.java  Makefile  exo1.java
SI3/S6/ssii/: shell.nix
SI3/S6/ssii/TD1/: TPdonneesNumIntro.ipynb
SI3/S6/ssii/TD10/: TPclassifImages.ipynb
SI3/S6/ssii/TD2/: TPknn.ipynb
SI3/S6/ssii/TD4/: TP4.ipynb
SI3/S6/ssii/TD8/: TPconv.ipynb
SI3/S6/ssii/TD9/: TPcorr.ipynb
SI4/S7/algo/td9/: ex1.py  ex2.py  ex3.py  flake.nix  timeit.py
SI4/S7/machine_learning/: flake.nix
SI4/S7/machine_learning/td1/: td1.ipynb
SI4/S7/machine_learning/td4/: TPclusteringSI4.ipynb
SI4/S7/machine_learning/td5/: diabetes.ipynb  digits.ipynb  phone_number_recognition.py  wine.ipynb
SI4/S7/machine_learning/td6/: tp6.ipynb
SI4/S7/machine_learning/td7/: TPneuralNetworkAsFunctionApproximator.ipynb
SI4/S7/machine_learning/td8/: TPneuralNetworksSI4-2022.ipynb
SI4/S7/machine_learning/td9/: TPcnn2021.ipynb
SI4/S7/mwsoc/: flake.nix  td2.7z  td5.7z
SI4/S7/mwsoc/td1/: README.md  pom.xml
SI4/S7/mwsoc/td4/: pom.xml
SI4/S7/software_sec/fuzz/: Text.doc  test.wmv
SI4/S7/software_sec/rsa/: CMakeLists.txt  c1.pem  flake.nix  rsa.c  rsa.h  task1.c  task2.c  task3.c  task4.c  task5.c
SI4/S8/embedded_ai/: flake.nix  sdk.nix
SI4/S8/embedded_ai/microai_edu/: .editorconfig  .gitignore
SI4/S8/prog_func/: pom.xml
SI4/S8/prog_func/TD1/: pom.xml
SI4/S8/prog_para/: CMakeLists.txt  CMakePresets.json  flake.nix
SI4/S8/prog_para/rendu/: tp3.cpp  tp3.md
SI4/S8/prog_para/scripts/: benchmark-tp1.py
SI4/S8/prog_para/src/: CMakeLists.txt  tp1.cpp  tp2-quicksort-seq.cpp  tp3-hillis-steele.cpp  utils.hpp
SI4/S8/prog_para_gpu/: flake.nix
SI4/S8/prog_para_gpu/td1/: bench.py  deviceFunction.py  memoryTransfer.py  td1.py  (+2 more)
SI4/S8/xml/: ex1.xml  ex2.xml  ex3.xml  ex4.xml  films.dtd
imafa/methode_numerique_pricing_option/: flake.nix  td1.ipynb  tdprof.ipynb
postgresql/: TP1donnees.sql  TP1schema.sql  config_local.py
postgresql/.pg/: current_logfiles  postgresql.conf  postmaster.opts  postmaster.pid
postgresql/.pg/global/: 1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  pg_control  pg_internal.init
postgresql/.pg/pg_stat_tmp/: db_0.stat  db_14767.stat  db_16917.stat  db_17010.stat  global.stat
postgresql/.pg/pg_subtrans/: 0000
postgresql/.pg/pg_xact/: 0000
prog_c_sys/: shell.nix
prog_c_sys/Exams/2015/: ex1.c  exo5.c
prog_c_sys/TD1/: 3-comptage.c  4-cat-num.c  5-conv-v1.c
prog_c_sys/TD10/: memoire.c  rechercheBinaire.c  stackCanary.c  test-valgrind.c
prog_c_sys/TD2/: 2-wc.c  CMakeLists.txt
prog_c_sys/TD3/: 1-search.c  3-stdlib.c
prog_c_sys/TD4/: 1-average.c  CMakeLists.txt
prog_c_sys/TD5/: 6-cat.c  7-echo.c  CMakeLists.txt
prog_c_sys/TD6/: 1-stack.c  4-btree.c  CMakeLists.txt  vector.h
prog_c_sys/TD7/: impl-1  impl-2  table-arbre.c  table-liste.c  table-tableau.c
prog_c_sys/TD8/: CMakeLists.txt
prog_object/DS3/: ArrayStack.java  LogItem.java  LogItemV0.java  UndoableStack.java
prog_object/DS_Final/src/: Identifiable.java  Library.java
prog_object/DS_Final/tests/: ItemDictionnaryTest.java
prog_object/TD4/: RecursionTest.java  TestClass.java  TestRecursion.java
prog_object/TD6/lab2/: ArrayStack.java  EmptyStackException.java  ListQueue.java  Pairing.java  PairingBis.java  StackQueue.java
prog_object/TD7-QMC/src/: Main.java  MinTerm.java  MinTermState.java  QMC.java
prog_object/TD7-QMC/test/: CategoryManagerTest.java  MinTermTest.java  PrimeImplicantChartTest.java  QMCTest.java
(+706 files in other folders)
